# Monitoring-Agent

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  beat.py  config.py  worker.py
app/api/v1/routes/: __init__.py  auth.py  monitoring.py  targets.py
app/core/: celery_app.py  config.py  db.py
app/log/: logger.py
app/modules/auth/: __init__.py  dependencies.py  models.py  services.py
app/modules/monitoring/: __init__.py  agents.py  ai_service.py  email_service.py  linkedin_service.py  models.py  scraper.py  services.py  tasks.py
app/modules/user/: __init__.py  models.py  services.py
app/tasks/: __init__.py  celery_app.py  monitoring.py  notifications.py
scripts/: scheduler.py  worker.py
