[project]
name = "montoring-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.119.1",
    "pydantic-settings>=2.11.0",
    "pymongo[srv]>=4.15.3",
]

[dependency-groups]
dev = [
    "ruff>=0.14.1",
]
